# roboconfig

./: .gitignore  CMakeLists.txt  Makefile  README.md  roboconfig-init-script  roboconfig.cpp  roboconfig.json
config/: foo2.json  roboconfig.json
public/: configuration.html  configuration.html-hold  index.html  json2flds.rb  logs.html  person.json  sirius.conf  test.json
public/css/: app.css
public/js/: app.js  configuration.js  log-dygraph.js  log-highchart.js  log.js
src/: config.cpp  config.hpp  json_trajectory.cpp  jsoncpp.cpp  mongoose.cpp  planner.cpp  roboconfig.cpp  segment.cpp  server.cpp  server.hpp  trajectory.cpp  ws_file_tail.cpp
src/inc/: config.h  config.hpp  frc_angle_math.h  path.h  planner.h  segment.h  server.h  server.hpp  spline.h  traj.h  trajectory.h  waypoint.h  ws_file_tail.h
